--- a/templates/home.html
+++ b/templates/home.html
@@ -388,7 +388,7 @@
                     </div>
                     <div class="testimonial">
                         <p>"Amazing experience! The bot made me feel more informed about my heart health without all the medical jargon. A fantastic tool!"</p>
-                        <h4>- Michael Bhai</h4>
+                        <h4>- Michael</h4>
                     </div>
                     <div class="testimonial">
                         <p>"The predictions gave me peace of mind and encouraged me to make some positive lifestyle changes. It's a great tool to have."</p>
@@ -410,9 +410,9 @@
       <p>© 2024 Pulse Predict. All rights reserved.</p>
       <p>Contact Us: <a href="mailto:support@pulsepredict.com" style="color: #0af;">support@pulsepredict.com</a></p>
       <div style="margin-top: 10px;">
-          <a href="https://www.instagram.com" target="_blank" style="color: #fff; margin: 0 10px;">Instagram</a>
-          <a href="https://www.linkedin.com" target="_blank" style="color: #fff; margin: 0 10px;">LinkedIn</a>
-          <a href="https://www.github.com" target="_blank" style="color: #fff; margin: 0 10px;">GitHub</a>
+          <a href="https://www.instagram.com/michael_0007a/" target="_blank" style="color: #fff; margin: 0 10px;">Instagram</a>
+          <a href="https://www.linkedin.com/in/r-michael-benedict-" target="_blank" style="color: #fff; margin: 0 10px;">LinkedIn</a>
+          <a href="https://github.com/michael-0007a/" target="_blank" style="color: #fff; margin: 0 10px;">GitHub</a>
       </div>
       <div style="padding: 10px; text-align: center;">
         <a href="/privacy-policy" style="margin: 0 15px; color: #fff;">Privacy Policy</a> |
